--- a/src/main/resources/com/flashlearn/login-view.fxml
+++ b/src/main/resources/com/flashlearn/login-view.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.flashlearn.LoginController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LoginController">
+    <Text fx:id="title" layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
+      <font>
+         <Font size="50.0" />
+      </font></Text>
+   <Button layoutX="266.0" layoutY="316.0" mnemonicParsing="false" text="Log In" />
+    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" />
+   <PasswordField layoutX="220.0" layoutY="245.0" promptText="Enter Password" />
+   <TextField layoutX="221.0" layoutY="200.0" promptText="Enter Username" />
 
 </AnchorPane>
