--- a/src/main/resources/com/flashlearn/main-menu-view.fxml
+++ b/src/main/resources/com/flashlearn/main-menu-view.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.flashlearn.MainMenuController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
-
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.MainMenuController">
+  <Text layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
+    <font>
+      <Font size="50.0" />
+    </font></Text>
+  <Button fx:id="logInButton" layoutX="273.0" layoutY="240.0" mnemonicParsing="false" text="Login" onAction="#logInClick" />
+  <Button fx:id="signUpButton" layoutX="266.0" layoutY="187.0" mnemonicParsing="false" text="Sign Up" onAction="#signUpClick" />
+  <Button fx:id="exitButton" layoutX="278.0" layoutY="296.0" mnemonicParsing="false" text="Exit" onAction="#exit" />
+</AnchorPane>
