--- a/src/main/resources/com/flashlearn/login-view.fxml
+++ b/src/main/resources/com/flashlearn/login-view.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LoginController">
-    <Text fx:id="title" layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
+    <Text layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
       <font>
          <Font size="50.0" />
       </font></Text>
    <Button layoutX="266.0" layoutY="316.0" mnemonicParsing="false" text="Log In" />
-    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" />
+    <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" onAction="#back"/>
    <PasswordField layoutX="220.0" layoutY="245.0" promptText="Enter Password" />
    <TextField layoutX="221.0" layoutY="200.0" promptText="Enter Username" />
 
