--- a/src/main/resources/com/flashlearn/sign-up-view.fxml
+++ b/src/main/resources/com/flashlearn/sign-up-view.fxml
@@ -8,12 +8,12 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.flashlearn.SignUpController"
             prefHeight="400.0" prefWidth="600.0">
-    <Text fx:id="title" layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
+    <Text layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
         <font>
             <Font size="50.0" />
         </font></Text>
     <Button layoutX="266.0" layoutY="316.0" mnemonicParsing="false" text="Sign Up" />
-    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" />
+    <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" onAction="#back"/>
     <PasswordField layoutX="220.0" layoutY="245.0" promptText="Enter New Password" />
     <TextField layoutX="221.0" layoutY="200.0" promptText="Enter New Username" />
 </AnchorPane>
