Connect login and sign up pages to home page

--- a/src/main/resources/com/flashlearn/login-view.fxml
+++ b/src/main/resources/com/flashlearn/login-view.fxml
@@ -12,6 +12,7 @@
    <Button fx:id="loginButton" layoutX="266.0" layoutY="316.0" mnemonicParsing="false" text="Log In" onAction="#login" />
     <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" onAction="#back"/>
    <PasswordField fx:id="passwordField" layoutX="220.0" layoutY="245.0" promptText="Enter Password" />
-   <TextField fx:id="usernameField" layoutX="221.0" layoutY="200.0" promptText="Enter Username" />
+   <TextField fx:id="usernameField" layoutX="220.0" layoutY="200.0" promptText="Enter Username" />
+    <Text fx:id="loginHelp" layoutX="220.0" layoutY="290.0"/>
 
 </AnchorPane>
