--- a/src/main/resources/com/flashlearn/home-page-view.fxml
+++ b/src/main/resources/com/flashlearn/home-page-view.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.flashlearn.HomePageController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.HomePageController">
+   <BorderPane prefHeight="400.0" prefWidth="600.0">
+      <top>
+         <Text BorderPane.alignment="CENTER">
+            <font>
+               <Font size="50.0" />
+            </font>
+         </Text>
+      </top>
+      <center>
+         <ScrollPane fx:id="contentHolder" prefHeight="350.0" prefWidth="600.0" BorderPane.alignment="CENTER">
 
+         </ScrollPane>
+      </center>
+   </BorderPane>
 </AnchorPane>
