--- a/src/main/resources/com/flashlearn/home-page-view.fxml
+++ b/src/main/resources/com/flashlearn/home-page-view.fxml
@@ -6,19 +6,23 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.HomePageController">
    <BorderPane prefHeight="400.0" prefWidth="600.0">
-      <top>
-         <Text BorderPane.alignment="CENTER">
-            <font>
-               <Font size="50.0" />
-            </font>
-         </Text>
-      </top>
       <center>
          <ScrollPane fx:id="contentHolder" prefHeight="350.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-               <TilePane fx:id="buttonHolder" prefWidth="600">
-                  <Button fx:id="addSetButton" prefWidth="100.0" prefHeight="100.0" onAction="#addSet">+</Button>
-               </TilePane>
+               <FlowPane fx:id="buttonHolder" prefWidth="600.0" >
+                  <Button fx:id="addSetButton" onAction="#addSet" prefHeight="100.0" prefWidth="100.0">+</Button>
+               </FlowPane>
             </ScrollPane>
       </center>
+      <top>
+         <HBox prefHeight="100.0" prefWidth="200.0" spacing="100.0" BorderPane.alignment="CENTER">
+            <Button fx:id="logOutButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="68.0" text="Log Out" onAction="#logOut"/>
+            <Text text="Home Page" textAlignment="CENTER">
+               <font>
+                  <Font size="50.0" />
+               </font>
+            </Text>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="82.0" text="Settings" />
+         </HBox>
+      </top>
    </BorderPane>
 </AnchorPane>
