Add delete set functionality

--- a/src/main/resources/com/flashlearn/flashcard-set-view.fxml
+++ b/src/main/resources/com/flashlearn/flashcard-set-view.fxml
@@ -12,7 +12,7 @@
         </center>
         <top>
             <HBox prefHeight="100.0" prefWidth="200.0" spacing="100.0" BorderPane.alignment="CENTER">
-                <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" prefHeight="50.0" prefWidth="68.0" text="Log Out" />
+                <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" prefHeight="50.0" prefWidth="68.0" text="Back" />
                 <Text fx:id="flashcardTitle" textAlignment="CENTER">
                     <font>
                         <Font size="50.0" />
@@ -24,7 +24,7 @@
           <HBox prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
               <Button fx:id="addCardButton" mnemonicParsing="false" prefHeight="50.0"  text="Add Card"/>
               <Button fx:id="editSetNameButton" mnemonicParsing="false" prefHeight="50.0" text="Edit Set Name" onAction="#editSetName"/>
-              <Button fx:id="deleteSetButton" mnemonicParsing="false" prefHeight="50.0" text="Delete Set"/>
+              <Button fx:id="deleteSetButton" mnemonicParsing="false" prefHeight="50.0" text="Delete Set" onAction="#deleteSet"/>
           </HBox>
       </bottom>
     </BorderPane>
