--- a/src/main/resources/com/flashlearn/flashcard-set-view.fxml
+++ b/src/main/resources/com/flashlearn/flashcard-set-view.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.FlashcardSetController">
-    <BorderPane prefHeight="400.0" prefWidth="600.0">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.FlashcardSetController">
         <center>
             <ScrollPane prefHeight="250.0" prefWidth="580.0" BorderPane.alignment="CENTER">
                 <VBox fx:id="cardHolder" VBox.vgrow="always" prefWidth="575.0">
@@ -38,5 +37,4 @@
 
           </HBox>
       </bottom>
-    </BorderPane>
-</AnchorPane>
+</BorderPane>
