--- a/src/main/resources/com/flashlearn/home-page-view.fxml
+++ b/src/main/resources/com/flashlearn/home-page-view.fxml
@@ -4,18 +4,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.HomePageController">
-   <BorderPane prefHeight="400.0" prefWidth="600.0">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.HomePageController">
       <center>
          <ScrollPane fx:id="contentHolder" prefHeight="350.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-               <FlowPane fx:id="buttonHolder" prefWidth="600.0" >
+               <FlowPane fx:id="buttonHolder" prefWidth="600.0">
                   <Button fx:id="addSetButton" onAction="#addSet" prefHeight="100.0" prefWidth="100.0">+</Button>
                </FlowPane>
             </ScrollPane>
       </center>
       <top>
-         <HBox prefHeight="100.0" prefWidth="200.0" spacing="100.0" BorderPane.alignment="CENTER">
-            <Button fx:id="logOutButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="68.0" text="Log Out" onAction="#logOut"/>
+         <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <Button fx:id="logOutButton" mnemonicParsing="false" onAction="#logOut" prefHeight="50.0" prefWidth="68.0" text="Log Out" textAlignment="CENTER" />
             <Text text="Home Page" textAlignment="CENTER">
                <font>
                   <Font size="36.0" />
@@ -23,5 +22,4 @@
             </Text>
          </HBox>
       </top>
-   </BorderPane>
-</AnchorPane>
+</BorderPane>
