--- a/src/main/resources/com/flashlearn/login-view.fxml
+++ b/src/main/resources/com/flashlearn/login-view.fxml
@@ -4,15 +4,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LoginController">
-    <Text layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
+<VBox alignment="CENTER" spacing="25.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LoginController">
+    <Text text="Flashlearn" wrappingWidth="222.00390625">
       <font>
          <Font size="50.0" />
       </font></Text>
-   <Button fx:id="loginButton" layoutX="266.0" layoutY="316.0" mnemonicParsing="false" text="Log In" onAction="#login" />
-    <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" onAction="#back"/>
-   <PasswordField fx:id="passwordField" layoutX="220.0" layoutY="245.0" promptText="Enter Password" />
-   <TextField fx:id="usernameField" layoutX="220.0" layoutY="200.0" promptText="Enter Username" />
+    <TextField fx:id="usernameField" maxWidth="250" promptText="Enter Username" />
+    <PasswordField fx:id="passwordField" maxWidth="250" promptText="Enter Password" />
     <Text fx:id="loginHelp" layoutX="220.0" layoutY="290.0"/>
+    <Button fx:id="loginButton" mnemonicParsing="false" text="Log In" onAction="#login" />
+    <Button fx:id="backButton" mnemonicParsing="false" text="Back" onAction="#back"/>
 
-</AnchorPane>
+
+</VBox>
