--- a/src/main/resources/com/flashlearn/sign-up-view.fxml
+++ b/src/main/resources/com/flashlearn/sign-up-view.fxml
@@ -4,17 +4,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<VBox alignment="CENTER" spacing="25.0" xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.flashlearn.SignUpController"
             prefHeight="400.0" prefWidth="600.0">
-    <Text layoutX="184.0" layoutY="133.0" text="Flashlearn" wrappingWidth="222.00390625">
+    <Text text="Flashlearn" wrappingWidth="222.00390625">
         <font>
             <Font size="50.0" />
         </font></Text>
-    <Button fx:id="signUpButton" layoutX="266.0" layoutY="316.0" mnemonicParsing="false" text="Sign Up" onAction="#signUp"/>
+    <TextField fx:id="usernameField" maxWidth="250.0" promptText="Enter New Username" />
+    <PasswordField fx:id="passwordField" maxWidth="250.0" promptText="Enter New Password" />
+    <Text fx:id="signUpGuide"/>
+    <Button fx:id="signUpButton"  mnemonicParsing="false" text="Sign Up" onAction="#signUp"/>
     <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" onAction="#back"/>
-    <PasswordField fx:id="passwordField" layoutX="220.0" layoutY="245.0" promptText="Enter New Password" />
-    <TextField fx:id="usernameField" layoutX="220.0" layoutY="200.0" promptText="Enter New Username" />
-    <Text fx:id="signUpGuide" layoutX="220.0" layoutY="290.0"/>
-</AnchorPane>
+
+</VBox>
