Fix enter keybinds

--- a/src/main/resources/com/flashlearn/learn-mode-view.fxml
+++ b/src/main/resources/com/flashlearn/learn-mode-view.fxml
@@ -4,11 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LearnModeController">
+<BorderPane fx:id="borderPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LearnModeController">
    <bottom>
-      <HBox fx:id="buttonHolder" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0" BorderPane.alignment="CENTER">
-         <Button mnemonicParsing="false" prefHeight="50.0" text="Flip Card or Press Enter" onAction="#flip" />
-      </HBox>
+      <HBox fx:id="buttonHolder" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0" BorderPane.alignment="CENTER"/>
    </bottom>
    <center>
        <SplitPane orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
