--- a/src/main/resources/com/flashlearn/login-view.fxml
+++ b/src/main/resources/com/flashlearn/login-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="25.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LoginController">
+<VBox fx:id="vbox" alignment="CENTER" spacing="25.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flashlearn.LoginController">
     <Text text="Flashlearn" wrappingWidth="222.00390625">
       <font>
          <Font size="50.0" />
