--- a/src/main/resources/com/flashlearn/sign-up-view.fxml
+++ b/src/main/resources/com/flashlearn/sign-up-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="25.0" xmlns="http://javafx.com/javafx"
+<VBox fx:id="vbox" alignment="CENTER" spacing="25.0" xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.flashlearn.SignUpController"
             prefHeight="400.0" prefWidth="600.0">
